--- a/geff-util/Cargo.toml
+++ b/geff-util/Cargo.toml
@@ -1,22 +1,18 @@
 [package]
-name = "geff-iced"
+name = "geff-util"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-iced = { version = "0.6", features = ["tokio"] }
 geff-core = { path = "../geff-core" }
-geff-util = { path = "../geff-util" }
-serde = { version = "1.0.151", features = ["derive"] }
 thiserror = "1.0.38"
-pest = "2.5.2"
-pest_derive = "2.5.2"
+serde = { version = "1.0.151", features = ["derive"] }
+rmp-serde = "1.1.1"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tokio = { version = "1.23.0", features = ["full"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 web-sys = { version = "0.3", features = ["Window", "Storage"] }
-wasm-timer = "0.2"
