Add tui frontend

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,6 @@ resolver = "2"
 members = [
         "geff-core",
         "geff-util",
-        "geff-iced"
+        "geff-iced",
+        "geff-tui",
 ]
