--- a/geff-tauri/src-tauri/Cargo.toml
+++ b/geff-tauri/src-tauri/Cargo.toml
@@ -16,9 +16,12 @@ tauri-build = { version = "1.2", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2", features = ["shell-open"] }
-geff-core = { path = "../../lib/geff-core" }
-geff-util = { path = "../../lib/geff-util" }
+tauri = { version = "1.2", features = ["api-all"] }
+geff-core = { path = "../../geff-core" }
+geff-util = { path = "../../geff-util" }
+anyhow = "1.0.68"
+nom = "7.1.2"
+typeshare = "1.0.0"
 
 [features]
 # by default Tauri runs in production mode
