--- a/geff-tauri/package.json
+++ b/geff-tauri/package.json
@@ -10,6 +10,11 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.7",
+    "@mui/x-date-pickers": "^5.0.17",
     "@reduxjs/toolkit": "^1.9.1",
     "@tauri-apps/api": "^1.2.0",
     "react": "^18.2.0",
