--- a/geff-tauri/package.json
+++ b/geff-tauri/package.json
@@ -23,11 +23,14 @@
     "redux": "^4.2.0"
   },
   "devDependencies": {
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.80",
     "@tauri-apps/cli": "^1.2.2",
     "@types/node": "^18.7.10",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^3.0.0",
+    "sass": "^1.62.1",
     "typescript": "^4.6.4",
     "vite": "^4.0.0"
   }
